[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SelectableArea.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mouse.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 24.0

[node name="POS" type="Area2D"]

position = Vector2( -0.231422, -0.0670128 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
pos = -1

[node name="Mouse_over" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="x_o" type="Sprite" parent="." index="2"]

[connection signal="input_event" from="." to="." method="_on_POS_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]


